# zero2prod

./: .env  Cargo.toml  Requests.http  configuration.yaml
.github/workflows/: coverage.yml  general.yml
migrations/: 20240915165739_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: health_check.rs  subscribe.rs
