[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
authors = ["Bahram Karimi <bahramkb@gmail.com>"]

[lib]
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later on.
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
serde = { version = "1.0.210", features = ["derive"] }
mysql = "25"
config = "0.14.0"

[dependencies.sqlx]
version = "0.8"
features = [
    "runtime-tokio-rustls",
    "macros",
    "mysql",
    "chrono",
    "migrate",
    "uuid"
]

[dev-dependencies]
